--- a/arch/x86/configs/wsa_defconfig
+++ b/arch/x86/configs/wsa_defconfig
@@ -1,19 +1,17 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.10.34 Kernel Configuration
+# Linux/x86 5.10.82 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="Ubuntu clang version 12.0.1-++20210512112613+6336c6eec1a1-1~exp1~20210512213359.99"
+CONFIG_CC_VERSION_TEXT="Lunatic clang version 15.0.0 (https://github.com/llvm/llvm-project 24c12bfb3345f8ea71471c59c6689f0148360813)"
 CONFIG_GCC_VERSION=0
-CONFIG_LD_VERSION=0
+CONFIG_LD_VERSION=234000000
 CONFIG_CC_IS_CLANG=y
-CONFIG_LD_IS_LLD=y
-CONFIG_CLANG_VERSION=120001
-CONFIG_LLD_VERSION=120001
+CONFIG_CLANG_VERSION=150000
+CONFIG_LLD_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_CAN_LINK_STATIC=y
 CONFIG_CC_HAS_ASM_GOTO=y
 CONFIG_CC_HAS_ASM_GOTO_OUTPUT=y
-CONFIG_TOOLS_SUPPORT_RELR=y
 CONFIG_CC_HAS_ASM_INLINE=y
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_TABLE_SORT=y
@@ -24,6 +22,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
+CONFIG_LOCALVERSION=""
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
 CONFIG_HAVE_KERNEL_GZIP=y
@@ -117,7 +116,6 @@ CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_PSI=y
 # CONFIG_PSI_DEFAULT_DISABLED is not set
-# CONFIG_PSI_PER_CGROUP_ACCT is not set
 # end of CPU/Task time and stats accounting
 
 # CONFIG_CPU_ISOLATION is not set
@@ -396,7 +394,6 @@ CONFIG_X86_16BIT=y
 CONFIG_X86_ESPFIX64=y
 CONFIG_X86_VSYSCALL_EMULATION=y
 CONFIG_X86_IOPL_IOPERM=y
-# CONFIG_I8K is not set
 # CONFIG_MICROCODE is not set
 # CONFIG_X86_MSR is not set
 # CONFIG_X86_CPUID is not set
@@ -671,6 +668,7 @@ CONFIG_KVM_AMD=y
 CONFIG_AS_AVX512=y
 CONFIG_AS_SHA1_NI=y
 CONFIG_AS_SHA256_NI=y
+CONFIG_AS_TPAUSE=y
 
 #
 # General architecture-dependent options
@@ -813,6 +811,7 @@ CONFIG_BLK_CMDLINE_PARSER=y
 # CONFIG_BLK_WBT is not set
 # CONFIG_BLK_CGROUP_IOLATENCY is not set
 # CONFIG_BLK_CGROUP_IOCOST is not set
+# CONFIG_BLK_CGROUP_IOPRIO is not set
 CONFIG_BLK_DEBUG_FS=y
 # CONFIG_BLK_SED_OPAL is not set
 CONFIG_BLK_INLINE_ENCRYPTION=y
@@ -891,6 +890,8 @@ CONFIG_ARCH_HAS_SYSCALL_WRAPPER=y
 # CONFIG_GKI_HIDDEN_NET_CONFIGS is not set
 # CONFIG_GKI_HIDDEN_PHY_CONFIGS is not set
 # CONFIG_GKI_HIDDEN_MM_CONFIGS is not set
+# CONFIG_GKI_HIDDEN_DMA_CONFIGS is not set
+# CONFIG_GKI_HIDDEN_ETHERNET_CONFIGS is not set
 # CONFIG_GKI_HACKS_TO_FIX is not set
 CONFIG_FREEZER=y
 
@@ -1742,6 +1743,7 @@ CONFIG_VIRTIO_BLK=y
 #
 # CONFIG_BLK_DEV_NVME is not set
 # CONFIG_NVME_FC is not set
+# CONFIG_NVME_TCP is not set
 # CONFIG_NVME_TARGET is not set
 # end of NVME Support
 
@@ -1910,6 +1912,7 @@ CONFIG_DM_BIO_PRISON=y
 CONFIG_DM_PERSISTENT_DATA=y
 # CONFIG_DM_UNSTRIPED is not set
 CONFIG_DM_CRYPT=y
+CONFIG_DM_DEFAULT_KEY=y
 CONFIG_DM_SNAPSHOT=y
 CONFIG_DM_THIN_PROVISIONING=y
 # CONFIG_DM_CACHE is not set
@@ -1936,7 +1939,6 @@ CONFIG_DM_BOW=y
 CONFIG_DM_USER=y
 # CONFIG_TARGET_CORE is not set
 # CONFIG_FUSION is not set
-CONFIG_DM_DEFAULT_KEY=y
 
 #
 # IEEE 1394 (FireWire) support
@@ -2412,6 +2414,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_CHARGER_BQ2415X is not set
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
+# CONFIG_BATTERY_RT5033 is not set
 # CONFIG_CHARGER_BD99954 is not set
 # CONFIG_HWMON is not set
 CONFIG_THERMAL=y
@@ -3734,7 +3737,6 @@ CONFIG_HYPERV_TIMER=y
 CONFIG_HYPERV_UTILS=y
 CONFIG_HYPERV_BALLOON=y
 CONFIG_DXGKRNL=y
-# CONFIG_DXGKRNL_DEBUG is not set
 # end of Microsoft Hyper-V guest support
 
 # CONFIG_GREYBUS is not set
@@ -3804,6 +3806,7 @@ CONFIG_CLKEVT_I8253=y
 CONFIG_I8253_LOCK=y
 CONFIG_CLKBLD_I8253=y
 # CONFIG_SUN4I_TIMER is not set
+# CONFIG_MTK_TIMER is not set
 # end of Clock Source drivers
 
 # CONFIG_MAILBOX is not set
@@ -3937,6 +3940,7 @@ CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 # CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 # CONFIG_ANDROID_DEBUG_SYMBOLS is not set
 # CONFIG_ANDROID_VENDOR_HOOKS is not set
+CONFIG_ANDROID_STRUCT_PADDING=y
 # end of Android
 
 CONFIG_LIBNVDIMM=y
@@ -4161,7 +4165,6 @@ CONFIG_PSTORE_CONSOLE=y
 # CONFIG_PSTORE_PMSG is not set
 # CONFIG_PSTORE_FTRACE is not set
 CONFIG_PSTORE_RAM=y
-# CONFIG_PSTORE_BLK is not set
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
 CONFIG_EROFS_FS=y
@@ -4170,7 +4173,6 @@ CONFIG_EROFS_FS_XATTR=y
 CONFIG_EROFS_FS_POSIX_ACL=y
 CONFIG_EROFS_FS_SECURITY=y
 CONFIG_EROFS_FS_ZIP=y
-CONFIG_EROFS_FS_CLUSTER_PAGE_LIMIT=1
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
@@ -4263,7 +4265,6 @@ CONFIG_HAVE_HARDENED_USERCOPY_ALLOCATOR=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_HARDENED_USERCOPY_FALLBACK=y
 # CONFIG_HARDENED_USERCOPY_PAGESPAN is not set
-CONFIG_FORTIFY_SOURCE=y
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_STATIC_USERMODEHELPER_PATH=""
 CONFIG_SECURITY_SELINUX=y
@@ -4868,6 +4869,7 @@ CONFIG_TRACER_SNAPSHOT=y
 CONFIG_TRACER_SNAPSHOT_PER_CPU_SWAP=y
 CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ANNOTATED_BRANCHES is not set
+# CONFIG_PROFILE_ALL_BRANCHES is not set
 # CONFIG_BLK_DEV_IO_TRACE is not set
 CONFIG_KPROBE_EVENTS=y
 # CONFIG_KPROBE_EVENTS_ON_NOTRACE is not set
